--- a/src/components/v2/components/Main.css
+++ b/src/components/v2/components/Main.css
@@ -18,8 +18,7 @@ body {
 }
 
 section {
-  height: calc(100vh - 14em);
-  margin-bottom: 50rem;
+  margin-bottom: 15rem;
 }
 
 p {
@@ -37,6 +36,7 @@ span {
   margin: 0 auto;
   width: 100%;
   padding: 32px;
+  overflow-y: hidden;
 }
 
 .Twrapper h1 {
@@ -192,7 +192,7 @@ button {
   section {
     scroll-snap-align: center;
     height: 100%;
-    margin-bottom: 35rem;
+    margin-bottom: 30rem;
   }
 }
 
