--- a/src/components/v2/components/Projects.css
+++ b/src/components/v2/components/Projects.css
@@ -2,6 +2,10 @@
   display: block;
 }
 
+#Projects-v2{
+  height: auto;
+}
+
 .project-container {
   display: grid;
   grid-template-columns: 300px 300px 300px 300px;
@@ -139,6 +143,8 @@
     grid-template-columns: 300px 300px;
   }
 }
+
+
 
 @media only screen and (max-width: 1000px) {
   .card-content {
