--- a/src/components/v2/components/Resume.css
+++ b/src/components/v2/components/Resume.css
@@ -97,6 +97,13 @@
   }
 }
 
+@media only screen and (min-width: 1020px) {
+  #Other-v2 {
+    margin-bottom: 15rem !important;
+  }
+}
+
+
 @media only screen and (max-width: 1050px) {
   .Rcontent {
     max-width: 500px;
